--- a/index.html
+++ b/index.html
@@ -377,425 +377,11 @@
 			</div>
 
 			<div class="row">
-				<div class="col p-0 card-deck">
-					<div class="col-4 p-0">
-						<div class="card border-0 recipe">
-							<img
-								src="https://via.placeholder.com/380x178"
-								alt=""
-								class="card-img-top"
-							/>
-							<div class="card-body">
-								<div class="row">
-									<div class="col">
-										<h2 class="recipe__name">Limonade de coco</h2>
-									</div>
-									<div class="col text-right">
-										<span class="recipe__time">
-											<i class="far fa-clock"></i> 10min</span
-										>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col">
-										<ul class="list-group recipe__ingredients-list">
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Lait de coco: </span
-												><span class="recipe__ingredient-quantity">400ml</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Jus de citron: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Créme de coco: </span
-												><span class="recipe__ingredient-quantity"
-													>4 cuillères</span
-												>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Sucre: </span
-												><span class="recipe__ingredient-quantity">20g</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Glaçons: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-										</ul>
-									</div>
-									<div class="col">
-										<p class="recipe__description">
-											Mettre les glaçons à votre goût dans le blender, ajouter
-											le lait, la crème de coco, le jus de 2 citrons et le
-											sucre. Mixer jusqu'à avoir la consistence désirée
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-4 p-0">
-						<div class="card border-0 recipe">
-							<img
-								src="https://via.placeholder.com/380x178"
-								alt=""
-								class="card-img-top"
-							/>
-							<div class="card-body">
-								<div class="row">
-									<div class="col">
-										<h2 class="recipe__name">Limonade de coco</h2>
-									</div>
-									<div class="col text-right">
-										<span class="recipe__time">
-											<i class="far fa-clock"></i> 10min</span
-										>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col">
-										<ul class="list-group recipe__ingredients-list">
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Lait de coco: </span
-												><span class="recipe__ingredient-quantity">400ml</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Jus de citron: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Créme de coco: </span
-												><span class="recipe__ingredient-quantity"
-													>4 cuillères</span
-												>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Sucre: </span
-												><span class="recipe__ingredient-quantity">20g</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Glaçons: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-										</ul>
-									</div>
-									<div class="col">
-										<p class="recipe__description">
-											Mettre les glaçons à votre goût dans le blender, ajouter
-											le lait, la crème de coco, le jus de 2 citrons et le
-											sucre. Mixer jusqu'à avoir la consistence désirée
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-4 p-0">
-						<div class="card border-0 recipe">
-							<img
-								src="https://via.placeholder.com/380x178"
-								alt=""
-								class="card-img-top"
-							/>
-							<div class="card-body">
-								<div class="row">
-									<div class="col">
-										<h2 class="recipe__name">Limonade de coco</h2>
-									</div>
-									<div class="col text-right">
-										<span class="recipe__time">
-											<i class="far fa-clock"></i> 10min</span
-										>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col">
-										<ul class="list-group recipe__ingredients-list">
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Lait de coco: </span
-												><span class="recipe__ingredient-quantity">400ml</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Jus de citron: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Créme de coco: </span
-												><span class="recipe__ingredient-quantity"
-													>4 cuillères</span
-												>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Sucre: </span
-												><span class="recipe__ingredient-quantity">20g</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Glaçons: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-										</ul>
-									</div>
-									<div class="col">
-										<p class="recipe__description">
-											Mettre les glaçons à votre goût dans le blender, ajouter
-											le lait, la crème de coco, le jus de 2 citrons et le
-											sucre. Mixer jusqu'à avoir la consistence désirée
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-4 p-0">
-						<div class="card border-0 recipe">
-							<img
-								src="https://via.placeholder.com/380x178"
-								alt=""
-								class="card-img-top"
-							/>
-							<div class="card-body">
-								<div class="row">
-									<div class="col">
-										<h2 class="recipe__name">Limonade de coco</h2>
-									</div>
-									<div class="col text-right">
-										<span class="recipe__time">
-											<i class="far fa-clock"></i> 10min</span
-										>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col">
-										<ul class="list-group recipe__ingredients-list">
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Lait de coco: </span
-												><span class="recipe__ingredient-quantity">400ml</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Jus de citron: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Créme de coco: </span
-												><span class="recipe__ingredient-quantity"
-													>4 cuillères</span
-												>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Sucre: </span
-												><span class="recipe__ingredient-quantity">20g</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Glaçons: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-										</ul>
-									</div>
-									<div class="col">
-										<p class="recipe__description">
-											Mettre les glaçons à votre goût dans le blender, ajouter
-											le lait, la crème de coco, le jus de 2 citrons et le
-											sucre. Mixer jusqu'à avoir la consistence désirée
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-4 p-0">
-						<div class="card border-0 recipe">
-							<img
-								src="https://via.placeholder.com/380x178"
-								alt=""
-								class="card-img-top"
-							/>
-							<div class="card-body">
-								<div class="row">
-									<div class="col">
-										<h2 class="recipe__name">Limonade de coco</h2>
-									</div>
-									<div class="col text-right">
-										<span class="recipe__time">
-											<i class="far fa-clock"></i> 10min</span
-										>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col">
-										<ul class="list-group recipe__ingredients-list">
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Lait de coco: </span
-												><span class="recipe__ingredient-quantity">400ml</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Jus de citron: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Créme de coco: </span
-												><span class="recipe__ingredient-quantity"
-													>4 cuillères</span
-												>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Sucre: </span
-												><span class="recipe__ingredient-quantity">20g</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Glaçons: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-										</ul>
-									</div>
-									<div class="col">
-										<p class="recipe__description">
-											Mettre les glaçons à votre goût dans le blender, ajouter
-											le lait, la crème de coco, le jus de 2 citrons et le
-											sucre. Mixer jusqu'à avoir la consistence désirée
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-4 p-0">
-						<div class="card border-0 recipe">
-							<img
-								src="https://via.placeholder.com/380x178"
-								alt=""
-								class="card-img-top"
-							/>
-							<div class="card-body">
-								<div class="row">
-									<div class="col">
-										<h2 class="recipe__name">Limonade de coco</h2>
-									</div>
-									<div class="col text-right">
-										<span class="recipe__time">
-											<i class="far fa-clock"></i> 10min</span
-										>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col">
-										<ul class="list-group recipe__ingredients-list">
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Lait de coco: </span
-												><span class="recipe__ingredient-quantity">400ml</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Jus de citron: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name"
-													>Créme de coco: </span
-												><span class="recipe__ingredient-quantity"
-													>4 cuillères</span
-												>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Sucre: </span
-												><span class="recipe__ingredient-quantity">20g</span>
-											</li>
-											<li
-												class="list-group-item border-0 p-0 recipe__ingredient-item"
-											>
-												<span class="recipe__ingredient-name">Glaçons: </span
-												><span class="recipe__ingredient-quantity">2</span>
-											</li>
-										</ul>
-									</div>
-									<div class="col">
-										<p class="recipe__description">
-											Mettre les glaçons à votre goût dans le blender, ajouter
-											le lait, la crème de coco, le jus de 2 citrons et le
-											sucre. Mixer jusqu'à avoir la consistence désirée
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+				<div class="col p-0 card-deck" id="recipesCards">
+					
 				</div>
 			</div>
 		</div>
-		<script src="dropdownwidth.js"></script>
-		<script src="dropdown.js"></script>
+		<script type="module" src="main.js"></script>
 	</body>
 </html>
