--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							</button>
 						</div>
 						<div class="search__filter-body">
-							<ul class="list-group bg-ingredient search__filter-list">
+							<ul class="list-group bg-ingredient search__filter-list" id="ingredientsDropdown">
 								<li
 									class="list-group-item border-0 bg-ingredient search__filter-itm"
 								>
@@ -132,7 +132,7 @@
 							</button>
 						</div>
 						<div class="search__filter-body">
-							<ul class="list-group bg-appliance search__filter-list">
+							<ul class="list-group bg-appliance search__filter-list" id="appliancesDropdown">
 								<li
 									class="list-group-item border-0 bg-appliance search__filter-itm"
 								>
@@ -168,207 +168,13 @@
 							</button>
 						</div>
 						<div class="search__filter-body">
-							<ul class="list-group bg-ustensil search__filter-list">
+							<ul class="list-group bg-ustensil search__filter-list" id="ustensilsDropdown">
 								<li
 									class="list-group-item border-0 bg-ustensil search__filter-itm"
 								>
 									<a href="" class="search__filter-link">Coco</a>
 								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
-								<li
-									class="list-group-item border-0 bg-ustensil search__filter-itm"
-								>
-									<a href="" class="search__filter-link">Coco</a>
-								</li>
+								
 								
 							</ul>
 						</div>
