added search dummies

--- a/index.html
+++ b/index.html
@@ -49,7 +49,24 @@
 
 			<div class="row">
 				<div class="col p-0 search__tags-wrapper" id="searchTags">
-					
+					<!-- <button
+						type="button"
+						class="btn btn-ingredient text-white search__tag-button"
+					>
+						<span class="search__tag-name">Ingredient</span>
+					</button>
+					<button
+						type="button"
+						class="btn btn-appliance text-white search__tag-button"
+					>
+						<span class="search__tag-name">Appareil</span>
+					</button>
+					<button
+						type="button"
+						class="btn btn-ustensil text-white search__tag-button"
+					>
+						<span class="search__tag-name">Ustensile</span>
+					</button> -->
 				</div>
 			</div>
 
