made cards and dropdowns responsive

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div>
 
 			<div class="row justify-content-center mt-1">
-				<div class="col p-0">
+				<div class="col-10 col-sm-12 p-0">
 					<form action="form-group">
 						<label class="search__global-label w-100">
 							<input
@@ -49,29 +49,11 @@
 
 			<div class="row">
 				<div class="col p-0 search__tags-wrapper" id="searchTags">
-					<!-- <button
-						type="button"
-						class="btn btn-ingredient text-white search__tag-button"
-					>
-						<span class="search__tag-name">Ingredient</span>
-					</button>
-					<button
-						type="button"
-						class="btn btn-appliance text-white search__tag-button"
-					>
-						<span class="search__tag-name">Appareil</span>
-					</button>
-					<button
-						type="button"
-						class="btn btn-ustensil text-white search__tag-button"
-					>
-						<span class="search__tag-name">Ustensile</span>
-					</button> -->
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="col-2 search__category-wrapper">
+			<div class="row flex-wrap search__categories">
+				<div class="col-10 col-lg-2  search__category-wrapper">
 					<button
 						class="text-white btn btn-block btn-ingredient btn-lg search__category-btn"
 						type="button"
@@ -103,7 +85,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-2 search__category-wrapper">
+				<div class="col-10 col-lg-2 search__category-wrapper">
 					<button
 						class="text-white btn btn-block btn-appliance btn-lg search__category-btn"
 						type="button"
@@ -136,7 +118,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-2 search__category-wrapper">
+				<div class="col-10 col-lg-2  search__category-wrapper">
 					<button
 						class="text-white btn btn-block btn-ustensil btn-lg search__category-btn"
 						type="button"
@@ -172,8 +154,8 @@
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="col p-0 card-deck" id="recipesCards">
+			<div class="row justify-content-center">
+				<div class="col p-0 card-deck " id="recipesCards">
 					
 				</div>
 			</div>
