replaced div inside buttons with span

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 			<div class="row flex-wrap search__categories">
 				<div class="col-10 col-lg-2  search__category-wrapper">
 					<button
-						class="text-white btn btn-block btn-ingredient btn-lg search__category-btn"
+						class="text-white btn btn-block btn-ingredient btn-lg search__category-btn text-left"
 						type="button"
 					>
-						<div class="w-75 text-left search__category-name">Ingredients</div>
+						<span class="w-75 text-left search__category-name">Ingredients</span>
 					</button>
 				</div>
 				<div
@@ -87,10 +87,10 @@
 				</div>
 				<div class="col-10 col-lg-2 search__category-wrapper">
 					<button
-						class="text-white btn btn-block btn-appliance btn-lg search__category-btn"
+						class="text-white btn btn-block btn-appliance btn-lg search__category-btn text-left"
 						type="button"
 					>
-						<div class="w-75 text-left search__category-name">Appareil</div>
+						<span class="w-75 text-left search__category-name">Appareil</span>
 					</button>
 				</div>
 				<div
@@ -120,10 +120,10 @@
 				</div>
 				<div class="col-10 col-lg-2  search__category-wrapper">
 					<button
-						class="text-white btn btn-block btn-ustensil btn-lg search__category-btn"
+						class="text-white btn btn-block btn-ustensil btn-lg search__category-btn text-left"
 						type="button"
 					>
-						<div class="w-75 text-left search__category-name">Ustensiles</div>
+						<span class="w-75 text-left search__category-name">Ustensiles</span>
 					</button>
 				</div>
 				<div
